--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p.part{
 </style>
 </head>
 <body>
-<img src="themostgenericbgimage.gif" class="bg">
+<img src="themostgenericbgimage.GIF" class="bg">
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 <p class="part">This is a class paragraph.</p>
