--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body {
   font-size: 300%;
 }
 img.bg {
+  opacity: 0.2;
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
