--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 body {
   color: blue;
   font-family: verdana;
-  font-size: 300%;
+  font-size: 14pt;
+  letter-spacing: 1px;
+  word-spacing: 0.8px;
 }
 img.bg {
   opacity: 0.5;
