--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <style>
 body {
   color: blue;
-  font-family: verdana;
-  font-size: 14pt;
-  letter-spacing: 1px;
-  word-spacing: 0.8px;
 }
 img.bg {
   opacity: 0.5;
@@ -25,6 +21,11 @@ img.bg {
   left: 0;
 }
 p{
+  font-family: verdana;
+  font-size: 14pt;
+  font-style: normal;
+  letter-spacing: 1px;
+  word-spacing: 0.8px;
   background: blue;
   color: red;
   font-family: courier;
@@ -33,6 +34,7 @@ p{
 p.part{
   background: black;
   color: white;
+  font-style: italic;
 }
 </style>
 </head>
