--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ p{
   font-family: verdana;
   font-size: 14pt;
   font-style: normal;
-  letter-spacing: 1px;
-  word-spacing: 0.8px;
+  letter-spacing: 1em;
+  word-spacing: 0.8em;
   background: blue;
   color: red;
   font-family: courier;
