--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ a.menuitems:focus{
 <img src="themostgenericbgimage.GIF" class="bg">
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-<p><a href="https://www.yle.fi/">Normal A Link</a></p>
-<p><a class="menuitmes" href="https://www.google.com/">The menuitemlink</a></p>
+<a href="https://www.yle.fi/">Normal A Link</a>
+<a class="menuitmes" href="https://www.google.com/">The menuitemlink</a>
 
 </body>
 </html>
