--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a.menuitems:focus{
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 <a href="https://www.yle.fi/">Normal A Link</a>
-<a class="menuitmes" href="https://www.google.com/">The menuitemlink</a>
+<a class="menuitems" href="https://www.google.com/">The menuitemlink</a>
 
 </body>
 </html>
