--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ a.menuitems:focus{
 <body>
 <img src="themostgenericbgimage.GIF" class="bg">
 <h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<p>This is a paragraph.
 <a href="https://www.yle.fi/">Normal A Link</a>
 <a class="menuitems" href="https://www.google.com/">The menuitemlink</a>
-
+</p>
 </body>
 </html>
