--- a/index.html
+++ b/index.html
@@ -17,12 +17,25 @@ a:active{
 a:focus{
   color:yellow;
 }
+  a.menuitems:link{
+ color: #668cff;
+  }
+a.menuitems:hover{
+  color: rgb(255,51,153);
+}
+a.menuitems:active{
+  color: #cc9900;
+}
+a.menuitems:focus{
+  color: #cccc00;
+}
 </style>
 </head>
 <body>
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 <p><a href="https://www.yle.fi/">Normal A Link</a></p>
+<p><a class="menuitems" href="https://www.google.com/">The menuitemlink</a></p>
 </p>
 </body>
 </html>
