--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-  color: blue;
-}
-a:link{
- color: blue;
-  }
-a:hover{
-  color:red;
-}
-a:active{
-  color:brown;
-}
-a:focus{
-  color:yellow;
-}
-  a.menuitems:link{
- color: #668cff;
-  }
-a.menuitems:hover{
-  color: rgb(255,51,153);
-}
-a.menuitems:active{
-  color: #cc9900;
-}
-a.menuitems:focus{
-  color: #cccc00;
-}
-</style>
-</head>
-<body>
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-<p><a href="https://www.yle.fi/">Normal A Link</a></p>
-<p><a class="menuitems" href="https://www.google.com/">The menuitemlink</a></p>
-</p>
-</body>
-</html>
+<html><head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Post-corona party planner</title>
+  </head>
+  <body>
+    <h1>Shoplist for party</h1>
+    <p>What to buy.</p>
+      <p>
+        <li>vodka</li>
+        <li>Beer</li>
+      </p>
+      <p>
+        <li>Balalaika</li>
+        <li>Accordion</li>
+      </p>
+</body></html>
