--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
-<html><head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Post-corona party planner</title>
+<html>
+  <head>
+        <title>Post-corona party planner</title>
   </head>
   <body>
-    <h1>Shoplist for party</h1>
-    <p>What to buy.</p>
-      <p>
-        <ol>
-            <li>vodka</li>
-            <li>Beer</li>
-        </ol>
-      </p>
-      <p>
-        <ul>  
-        <li>Balalaika</li>
-        <li>Accordion</li>
-        </ul>
-       </p>
+    <h1 class="styling">Shoplist for party</h1>
+    <h2 class="styling">What to not buy.</h2>
+     <p  class="styling">face masks and hand sanitizers</p>
+
 </body></html>
