--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <h1 class="styling">Shoplist for party</h1>
     <h2 class="styling">What to not buy.</h2>
      <p  class="styling">face masks and hand sanitizers</p>
-
+    <div>Here is a div section</div>
 </body></html>
