--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css">
-        <title>Post-corona party planner</title>
-  </head>
-  <body>
-    <h1 class="styling">Shoplist for party</h1>
-    <h2 class="styling">What to not buy.</h2>
-     <p  class="styling">face masks and hand sanitizers</p>
-    <div>Here is a div section</div>
-</body></html>
+<html><head>
+<style>
+div.fixed{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border: 3px solid #73AD21;
+}
+div.static{
+  position: static;
+  border: 3px solid #73AD21;
+}
+div.relative{
+  position: relative;
+  left: 30px;
+  border: 3px solid #73AD21;
+}
+div.absolute{
+  position: absolute;
+  top: 180px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+  border: 3px solid #73AD21;
+}
+</style>
+    <h1>List of birthday presents</h1>
+<body>
+    <div class="relative">A big fish</div>
+    <div class="fixed">Rullabulla</div>
+    <div class="static">Good lunch</div>
+    <div class="absolute">Padel racket</div>
+</body>
+</html>
