--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@ div.absolute{
   height: 100px;
   border: 3px solid #73AD21;
 }
-div.image {
-   content:url(https://github.com/Jenttila/uusi/blob/main/fishcake.GIF);
-}
 </style>
     <h1>List of birthday presents</h1>
 <body>
-    <div class="relative image">A big fish</div>
+    <div class="relative">A big fish</div>
     <div class="fixed">Rullabulla</div>
     <div class="static">Good lunch</div>
     <div class="absolute">Padel racket</div>
