--- a/index.html
+++ b/index.html
@@ -1,35 +1,18 @@
-<html><head>
-<style>
-div.fixed{
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 300px;
-  border: 3px solid #73AD21;
-}
-div.static{
-  position: static;
-  border: 3px solid #73AD21;
-}
-div.relative{
-  position: relative;
-  left: 30px;
-  border: 3px solid #73AD21;
-}
-div.absolute{
-  position: absolute;
-  top: 180px;
-  right: 0;
-  width: 200px;
-  height: 100px;
-  border: 3px solid #73AD21;
-}
-</style>
-    <h1>List of birthday presents</h1>
-<body>
-    <div class="relative">A big fish</div>
-    <div class="fixed">Rullabulla</div>
-    <div class="static">Good lunch</div>
-    <div class="absolute">Padel racket</div>
-</body>
-</html>
+<!﻿DOCTYPE﻿ ﻿html﻿>
+<﻿html﻿>
+<﻿head﻿>
+   <﻿meta﻿ ﻿charset﻿=﻿"﻿utf-8﻿"﻿>
+   <﻿meta﻿ ﻿http-equiv﻿=﻿"﻿X-UA-Compatible﻿"﻿ ﻿content﻿=﻿"﻿IE=edge﻿"﻿>
+   <﻿meta﻿ ﻿name﻿=﻿"﻿viewport﻿"﻿ ﻿content﻿=﻿"﻿width=device-width, initial-scale=1﻿"﻿>
+   <﻿title﻿>Sample Page</﻿title﻿>
+   <﻿link﻿ ﻿rel﻿=﻿"﻿stylesheet﻿"﻿ ﻿href﻿=﻿"﻿css/bootstrap.css﻿"﻿>
+</﻿head﻿>
+<﻿body﻿>
+   <﻿div﻿ ﻿class﻿=﻿"﻿jumbotron﻿"﻿>
+      <﻿h1﻿>Hello!</﻿h1﻿>
+      <﻿p﻿>This is our first Bootstrap page! :)</﻿p﻿>
+   </﻿div﻿>
+   <﻿script﻿ ﻿src﻿=﻿"﻿js/jquery-3.2.1.js﻿"﻿>﻿﻿</﻿script﻿>
+   <﻿script﻿ ﻿src﻿=﻿"﻿js/bootstrap.js﻿"﻿>﻿﻿</﻿script﻿>
+</﻿body﻿>
+</﻿html﻿>
