--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!﻿DOCTYPE﻿ ﻿html﻿>
-<﻿html﻿>
-<﻿head﻿>
-   <﻿meta﻿ ﻿charset﻿=﻿"﻿utf-8﻿"﻿>
-   <﻿meta﻿ ﻿http-equiv﻿=﻿"﻿X-UA-Compatible﻿"﻿ ﻿content﻿=﻿"﻿IE=edge﻿"﻿>
-   <﻿meta﻿ ﻿name﻿=﻿"﻿viewport﻿"﻿ ﻿content﻿=﻿"﻿width=device-width, initial-scale=1﻿"﻿>
-   <﻿title﻿>Sample Page</﻿title﻿>
-   <﻿link﻿ ﻿rel﻿=﻿"﻿stylesheet﻿"﻿ ﻿href﻿=﻿"﻿css/bootstrap.css﻿"﻿>
-</﻿head﻿>
-<﻿body﻿>
-   <﻿div﻿ ﻿class﻿=﻿"﻿jumbotron﻿"﻿>
-      <﻿h1﻿>Hello!</﻿h1﻿>
-      <﻿p﻿>This is our first Bootstrap page! :)</﻿p﻿>
-   </﻿div﻿>
-   <﻿script﻿ ﻿src﻿=﻿"﻿js/jquery-3.2.1.js﻿"﻿>﻿﻿</﻿script﻿>
-   <﻿script﻿ ﻿src﻿=﻿"﻿js/bootstrap.js﻿"﻿>﻿﻿</﻿script﻿>
-</﻿body﻿>
-</﻿html﻿>
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Sample Page</title>
+   <link rel="stylesheet" href="css/bootstrap.css">
+</head>
+<body>
+   <div class="jumbotron">
+      <h1>Hello!</h1>
+      <p>This is our first Bootstrap page! :)</p>
+   </div>
+   <script src="js/jquery-3.2.1.js"></script>
+   <script src="js/bootstrap.js"></script>
+</body>
+</html>
