--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
    </div>
    <script src="js/jquery-3.2.1.js"></script>
    <script src="js/bootstrap.js"></script>
+   <div class="container-fluid">
+      <div class="row">
+	      <div class="col-xs-1">
+       		<a class="nav-link" href="index.html">Home page here</a>
+    	   </div>
+   	<div class="col-sm-5">
+     		   <a class="nav-link" href="services.html">Services here</a>
+         </div>
+      <div class="col-md-3">
+          	<a class="nav-link" href="contact.html">Contact details here</a>
+      </div>
+      <div class="col-lg-3">
+           	<a class="nav-link" href="contact.html">And some extra here</a>
+      </div>
+   </div>
+   </div>
+    
 </body>
 </html>
