--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           	<a class="nav-link" href="contact.html">Contact details here</a>
       </div>
       <div class="col-lg-3">
-           	<a class="nav-link" href="contact.html">And some extra here</a>
+           	<a class="nav-link" href="contact.html">And the last link here</a>
       </div>
    </div>
    </div>
