--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
-   <link rel="stylesheet" href="css/bootstrap.css">
+   <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
    <div class="jumbotron">
       <h1>Hello!</h1>
       <p>This is our first Bootstrap page! :)</p>
    </div>
-   <script src="js/jquery-3.2.1.js"></script>
-   <script src="js/bootstrap.js"></script>
+   <script src="bootstrap.js"></script>
    <div class="container-fluid">
       <div class="row">
 	      <div class="col-xs-1">
@@ -26,7 +25,7 @@
           	<a class="nav-link" href="contact.html">Contact details here</a>
       </div>
       <div class="col-lg-3">
-           	<a class="nav-link" href="contact.html">And the last link</a>
+           	<a class="nav-link" href="contact.html">The last of them</a>
       </div>
    </div>
    </div>
