--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
    </div>
    </div>
 	<div><img src="fishcake.GIF" class="hm-red-light"></div>
+	<div><img src="fishcake.GIF" class="hm-red-slight"></div>
+	<div><img src="fishcake.GIF" class="hm-red-strong"></div>
+	<div><img src="fishcake.GIF" class="hm-zoom"></div>
+	<div><img src="fishcake.GIF" class="hoverable"></div>
 </body>
 </html>
