--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
    </div>
    </div>
-	<div><img src="fishcake.GIF" class="hm-red-light"></div>
+	<div class="hm-red-light"><img src="fishcake.GIF"></div>
 	<div><img src="fishcake.GIF" class="hm-red-slight"></div>
 	<div><img src="fishcake.GIF" class="hm-red-strong"></div>
 	<div><img src="fishcake.GIF" class="hm-zoom"></div>
