--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
    </div>
    </div>
 	<div class="hm-red-light"><img src="fishcake.GIF"></div>
-	<div><img src="fishcake.GIF" class="hm-red-slight"></div>
-	<div><img src="fishcake.GIF" class="hm-red-strong"></div>
-	<div><img src="fishcake.GIF" class="hm-zoom"></div>
-	<div><img src="fishcake.GIF" class="hoverable"></div>
+	<div class="hm-red-slight"><img src="fishcake.GIF"></div>
+	<div class="hm-red-strong"><img src="fishcake.GIF"></div>
+	<div class="hm-zoom"><img src="fishcake.GIF"></div>
+	<div class="hoverable"><img src="fishcake.GIF"></div>
 </body>
 </html>
