--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
            	<a class="nav-link" href="contact.html">The last of them</a>
       </div>
    </div>
+   <p>
+	<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>  
    </div>
 	<div class="hm-red-light"><img src="fishcake.GIF"></div>
 	<div class="hm-red-slight"><img src="fishcake.GIF"></div>
