--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 	<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
-	<div class="hm-red-light"><img src="fishcake.GIF"></div>
-	<div class="hm-red-slight"><img src="fishcake.GIF"></div>
-	<div class="hm-red-strong"><img src="fishcake.GIF"></div>
-	<div class="hm-zoom"><img src="fishcake.GIF"></div>
-	<div class="hoverable"><img src="fishcake.GIF"></div>
+	<div class="view hm-red-light"><img src="fishcake.GIF"></div>
+	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
+	<div class="view hm-red-strong"><img src="fishcake.GIF"></div>
+	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
+	<div class="view hoverable"><img src="fishcake.GIF"></div>
 </body>
 </html>
