--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	   </p>
    </div>
 	<div class="view hm-red-light"><img src="fishcake.GIF" class="img-fluid">
-		<div class="mask flex-center"><p class="white-text">strong overlay</p>
-	</div>
+		<div class="mask flex-center"><p class="white-text">strong overlay</p></div>
+	</div>	
 	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
 	<div class="view hm-red-strong"><img src="fishcake.GIF"></div>
 	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
