--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 	<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
-	<div class="view hm-red-light"><img src="fishcake.GIF" class="img-fluid">
-		<div class="mask flex-center"><p class="white-text">strong overlay</p></div>
-	</div>	
+	<div class="view hm-teal-strong">
+	<img src="fishcake.GIF" class="img-fluid">
+        <div class="mask flex-center waves-effect waves-light">
+		<p class="white-text">strong overlay</p>
+	</div>
+   </div>	
 	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
 	<div class="view hm-red-strong"><img src="fishcake.GIF"></div>
 	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
-	<div class="view hoverable"><img src="fishcake.GIF"></div>
-	<div class="view hm-black-strong"><img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(28).jpg" class="img-fluid" alt="">
-    <div class="mask flex-center">
-        
+	<div class="view hoverable"><img src="fishcake.GIF"></div>        
     </div>
 </body>
 </html>
