--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
    <div class="jumbotron">
-      <h1>Hello!</h1>
-      <p>This is our first Bootstrap page! :)</p>
+      <h1>The B-day</h1>
+      <p>Guide to golden 27</p>
    </div>
    <script src="bootstrap.js"></script>
    <div class="container-fluid">
       <div class="row">
 	      <div class="col-xs-3">
-       		<a class="nav-link" href="index.html">Home page here</a>
+       		<a class="nav-link" href="index.html">Big fishies come here</a>
     	   </div>
    	<div class="col-sm-5">
-     		   <a class="nav-link" href="services.html">Services here</a>
+     		   <a class="nav-link" href="services.html">Rullabullas här</a>
          </div>
       <div class="col-md-3">
-          	<a class="nav-link" href="contact.html">Contact details here</a>
+          	<a class="nav-link" href="contact.html">Padel field reservations</a>
       </div>
       <div class="col-lg-1">
-           	<a class="nav-link" href="contact.html">The last of them</a>
+           	<a class="nav-link" href="contact.html">Nautica lunchmeny</a>
       </div>
    </div>
    <p>
