--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
    </div>
    <p>
-	<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
+	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
 	<div class="view hm-teal-strong">
