--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
-	<div class="view hm-teal-strong">
-	<img src="fishcake.GIF" class="img-fluid">
-        <div class="mask flex-center waves-effect waves-light">
-		<p class="white-text">strong overlay</p>
-	</div>
-   </div>	
+          <div class="view overlay">
+            <img src="fishcake.GIF" class="img-fluid " alt="smaple image">
+            <div class="mask flex-center rgba-red-strong">
+              <p class="white-text">Strong overlay</p>
+            </div>
+          </div>
 	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
 	<div class="view hm-red-strong"><img src="fishcake.GIF"></div>
 	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
