--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="view overlay">
             <img src="fishcake.GIF" class="img-fluid " alt="smaple image">
             <div class="mask flex-center rgba-red-strong">
-              <p class="white-text">Strong overlay</p>
+              <p class="white-text">Affenoita</p>
             </div>
           </div>
 	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
