--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
 	<div class="view hoverable"><img src="fishcake.GIF"></div>
     </div>
+	          <div class="view overlay">
+            <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid " alt="smaple image">
+            <div class="mask flex-center rgba-red-strong">
+              <p class="white-text">Strong overlay</p>
+            </div>
+          </div>
 </div>
 </body>
 </html>
