--- a/index.html
+++ b/index.html
@@ -33,22 +33,12 @@
 	   </p>
    </div>
           <div class="view overlay">
-            <img src="fishcake.GIF" class="img-fluid " alt="smaple image">
+            <img src="fishcake.GIF" class="img-fluid " alt="fishycake">
             <div class="mask flex-center rgba-red-strong">
               <p class="white-text">Affenoita</p>
             </div>
           </div>
-	<div class="view hm-red-slight"><img src="fishcake.GIF"></div>
-	<div class="view hm-red-strong"><img src="fishcake.GIF"></div>
-	<div class="view hm-zoom"><img src="fishcake.GIF"></div>
-	<div class="view hoverable"><img src="fishcake.GIF"></div>
-    </div>
-	          <div class="view overlay">
-            <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid " alt="smaple image">
-            <div class="mask flex-center rgba-red-strong">
-              <p class="white-text">Strong overlay</p>
-            </div>
-          </div>
-</div>
+
+        </div>
 </body>
 </html>
