--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
 	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
-          <div class="view overlay">
-            <img src="fishcake.GIF" class="img-fluid " alt="fishycake">
-            <div class="mask flex-center rgba-red-strong">
-              <p class="white-text">Affenoita</p>
-            </div>
-          </div>
-
-        </div>
+<div class="container">
+  <img src="fishcake.GIF" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">Affenet</div>
+  </div>
+</div>
 </body>
 </html>
