--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="container">
   <img src="fishcake.GIF" alt="Avatar" class="image">
   <div class="overlay">
-    <div class="text">Affenet</div>
+    <div class="text">Haukion kala</div>
   </div>
 </div>
 </body>
