--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
 	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
-<div class="container">
-  <img src="fishcake.GIF" alt="Avatar" class="image">
-  <div class="overlay">
-    <div class="text">Haukion kala</div>
-  </div>
+<div class="bg-image hover-overlay">
+  <img src="fishcake.GIF" class="w-100" />
+  <div
+    class="mask"
+    style="
+      background: linear-gradient(
+        45deg,
+        rgba(29, 236, 197, 0.5),
+        rgba(91, 14, 214, 0.5) 100%
+      );
+    "
+  ></div>
 </div>
 </body>
 </html>
