--- a/index.html
+++ b/index.html
@@ -6,6 +6,48 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
    <link rel="stylesheet" href="bootstrap.css">
+   <style>
+    <style>
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+</style>
 </head>
 <body>
    <div class="jumbotron">
@@ -32,5 +74,11 @@
 	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
 	   </p>
    </div>
+	<div class="container">
+  <img src="fishcake.GIF" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">Köllit</div>
+  </div>
+</div>
 </body>
 </html>
