--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
    <div class="container-fluid">
       <div class="row">
 	      <div class="col-xs-3">
-       		<a class="nav-link" href="index.html">Big fishies come here</a>
+       		<a class="nav-link" href="https://www.youtube.com/watch?v=mIgdxauRzBM">Big fishies come here</a>
     	   </div>
    	<div class="col-sm-5">
-     		   <a class="nav-link" href="services.html">Rullabullas här</a>
+     		   <a class="nav-link" href="https://www.k-ruoka.fi/artikkelit/juhla/kaaretortut">Rullabullas här</a>
          </div>
       <div class="col-md-3">
-          	<a class="nav-link" href="contact.html">Padel field reservations</a>
+          	<a class="nav-link" href="https://padeljoy.com/16-padel-tennis-tips-for-beginners/">The world of Padel</a>
       </div>
       <div class="col-lg-1">
-           	<a class="nav-link" href="contact.html">Nautica lunchmeny</a>
+           	<a class="nav-link" href="http://www.nautical.ax/sv/mat/lunch">Nautica lunchmeny</a>
       </div>
    </div>
    <p>
