--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <div class="container-fluid">
       <div class="row">
 	      <div class="col-xs-3">
-       		<a class="nav-link" href="https://www.youtube.com/watch?v=mIgdxauRzBM">Big fishies come here</a>
+       		<a class="nav-link" href="https://www.youtube.com/watch?v=mIgdxauRzBM">Big fishies here</a>
     	   </div>
    	<div class="col-sm-5">
      		   <a class="nav-link" href="https://www.k-ruoka.fi/artikkelit/juhla/kaaretortut">Rullabullas här</a>
