--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <div class="container-fluid">
       <div class="row">
 	      <div class="col-xs-3">
-       		<a class="nav-link" href="https://www.youtube.com/watch?v=mIgdxauRzBM">Big fishies here</a>
+       		<a class="nav-link" href="https://www.google.com/search?q=big+pikes&tbm=isch&ved=2ahUKEwiwmY2th4nxAhUGxYsKHYSUAI4Q2-cCegQIABAA&oq=big+pikes&gs_lcp=CgNpbWcQAzIECAAQEzIKCAAQCBAHEB4QEzIICAAQCBAeEBM6BggAEAcQHjoICAAQBxAFEB46CAgAEAgQBxAeUKU6WKM8YPZBaABwAHgAgAFViAHtAZIBATOYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Zeu_YPDSNYaKrwSEqYLwCA&bih=656&biw=1396">Big fishies here</a>
     	   </div>
    	<div class="col-sm-5">
      		   <a class="nav-link" href="https://www.k-ruoka.fi/artikkelit/juhla/kaaretortut">Rullabullas här</a>
@@ -74,7 +74,7 @@
 	   </p>
    </div>
 <div class="container">
-  <img src="fishcake.GIF" alt="Avatar" class="image">
+  <img src="fishcake.GIF" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1" alt="Avatar" class="image">
   <div class="overlay">
   	<div class="text">Köllit</div>
   </div>
