--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 	   </p>
    </div>
 <div class="container">
-  <img src="fishcake.GIF" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1" alt="Avatar" class="image">
+  <img src="fishcake.GIF" alt="Avatar" class="image">
   <div class="overlay">
-  	<div class="text">Köllit</div>
+  	<div class="text" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1">Köllit</div>
   </div>
 </div>
 </body>
