--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="container">
   <img src="fishcake.GIF" alt="Avatar" class="image">
   <div class="overlay">
-  	<div class="text" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1">Köllit</div>
+  	<div class="text nav-link" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1">Tämän päivän kalagiffi</div>
   </div>
 </div>
 </body>
