--- a/index.html
+++ b/index.html
@@ -37,10 +37,35 @@
 	   </p>
    </div>
 <div class="container">
-  <img src="fishcake.GIF" alt="Avatar" class="image">
-  <div class="overlay">
-  	<div class="text nav-link" href="https://www.youtube.com/watch?v=x8aKZC69XUE&list=RDCMUC3iWFSlVM1WYTePT2aUd4hQ&start_radio=1">Tämän päivän kalagiffi</div>
-  </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Geysers Valley Hotel</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i> Russia</p>
+                    </div>
+                </a> </div>
+        </div>
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Khumbu Valley Hotel</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i> Nepal</p>
+                    </div>
+                </a> </div>
+        </div>
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Waipi’o Valley Hotel</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i> Hawaii</p>
+                    </div>
+                </a> </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
