--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
    <link rel="stylesheet" href="bootstrap.css">
-   <link rel="stylesheet" href="bootstrap.js">
+   <link rel="stylesheet" href="customes.css">
    <style>
 
 </style>
