--- a/index.html
+++ b/index.html
@@ -67,5 +67,35 @@
         </div>
     </div>
 </div>
+	<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Number</th>
+      <th scope="col">Name</th>
+      <th scope="col">Reason</th>
+      <th scope="col">Effort</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Jenska</td>
+      <td>Mr Eumer</td>
+      <td>Erika Vikman</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Missing the project end party</td>
+      <td>all the discussions about fish</td>
+      <td>She's feeling hot</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>bringing all the vodka</td>
+      <td>Bringing all the fish</td>
+      <td>Bringing all the music</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
