--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content"> <a href="#">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
-                        <h3 class="content-title">Geysers Valley Hotel</h3>
+                        <h3 class="content-title">Ahvenaula</h3>
                         <p class="content-text"><i class="fa fa-map-marker"></i> Russia</p>
                     </div>
                 </a> </div>
@@ -51,7 +51,7 @@
             <div class="content"> <a href="#">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
-                        <h3 class="content-title">Khumbu Valley Hotel</h3>
+                        <h3 class="content-title">Haukion Kala</h3>
                         <p class="content-text"><i class="fa fa-map-marker"></i> Nepal</p>
                     </div>
                 </a> </div>
@@ -60,7 +60,7 @@
             <div class="content"> <a href="#">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
-                        <h3 class="content-title">Waipi’o Valley Hotel</h3>
+                        <h3 class="content-title">Köllikulma</h3>
                         <p class="content-text"><i class="fa fa-map-marker"></i> Hawaii</p>
                     </div>
                 </a> </div>
