--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <tr>
       <th scope="row">1</th>
       <td>Jenska</td>
-      <td>Mr Eumer</td>
+      <td>Missing the project end partyr</td>
       <td>Erika Vikman</td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Missing the project end party</td>
+      <td>Mr. Eumer</td>
       <td>all the discussions about fish</td>
       <td>She's feeling hot</td>
     </tr>
