--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
     <tr>
       <th scope="row">1</th>
       <td>Jenska</td>
-      <td>Missing the project end partyr</td>
-      <td>Erika Vikman</td>
+      <td>Missing the project end party</td>
+      <td>Bringing all the vodka</td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Mr. Eumer</td>
       <td>all the discussions about fish</td>
-      <td>She's feeling hot</td>
+      <td>Bringing all the fish</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>bringing all the vodka</td>
-      <td>Bringing all the fish</td>
+      <td>Erika Vikman</td>
+      <td>She's feeling hot</td>
       <td>Bringing all the music</td>
     </tr>
   </tbody>
