--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Ahvenaula</h3>
-                        <p class="content-text"><i class="fa fa-map-marker"></i> Russia</p>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Maarianhamina</p>
                     </div>
                 </a> </div>
         </div>
@@ -52,7 +52,7 @@
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Haukion Kala</h3>
-                        <p class="content-text"><i class="fa fa-map-marker"></i> Nepal</p>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Kaukana kaukana ja tarpeeksi syvällä</p>
                     </div>
                 </a> </div>
         </div>
@@ -61,7 +61,7 @@
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Köllikulma</h3>
-                        <p class="content-text"><i class="fa fa-map-marker"></i> Hawaii</p>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Kukkisen kulmilla</p>
                     </div>
                 </a> </div>
         </div>
