--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 </div>
-	<table class="table">
+	<table class="table table.bordered">
   <thead>
     <tr>
       <th scope="col">Number</th>
