--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         </div>
     </div>
 </div>
+<div>	
+	<h2>Guest list for the party</h2>
 	<table class="table table.bordered">
   <thead>
     <tr>
@@ -97,5 +99,6 @@
     </tr>
   </tbody>
 </table>
+</div>
 </body>
 </html>
