--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<h2>Guest list for the party</h2>
 	<table class="table table.bordered">
   <thead>
-    <tr>
+    <tr class="table-active">
       <th scope="col">Number</th>
       <th scope="col">Name</th>
       <th scope="col">Reason</th>
