--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 </div>
 <div>	
 	<h2>Guest list for the party</h2>
-	<table class="table table.bordered">
+	<table class="table table-bordered">
   <thead>
-    <tr class="table-active">
+    <tr class="table-active table-hover">
       <th scope="col">Number</th>
       <th scope="col">Name</th>
       <th scope="col">Reason</th>
@@ -79,19 +79,19 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+    <tr class="table-info">
       <th scope="row">1</th>
       <td>Jenska</td>
       <td>Missing the project end party</td>
       <td>Bringing all the vodka</td>
     </tr>
-    <tr>
+    <tr class="table-light">
       <th scope="row">2</th>
       <td>Mr. Eumer</td>
       <td>all the discussions about fish</td>
       <td>Bringing all the fish</td>
     </tr>
-    <tr>
+    <tr class="table-danger">
       <th scope="row">3</th>
       <td>Erika Vikman</td>
       <td>She's feeling hot</td>
