--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Haukion Kala</h3>
                         <p class="content-text"><i class="fa fa-map-marker"></i>Kaukana kaukana ja tarpeeksi syvällä</p>
+			    <div class="alert alert-primary" role="alert"></div>
                     </div>
                 </a> </div>
         </div>
