--- a/index.html
+++ b/index.html
@@ -101,30 +101,18 @@
   </tbody>
 </table>
 </div>
-	<div class="alert alert-primary" role="alert">
-   This is a primary alert—check it out!
-</div>
-<div class="alert alert-secondary" role="alert">
-   This is a secondary alert—check it out!
-</div> 
 <div class="alert alert-success" role="alert"> 
-   This is a success alert—check it out! 
-</div> 
-<div class="alert alert-danger" role="alert"> 
-    This is a danger alert—check it out! 
-</div> 
-<div class="alert alert-warning" role="alert"> 
-   This is a warning alert—check it out! 
-</div> 
-<div class="alert alert-info" role="alert"> 
-   This is a info alert—check it out! 
-</div> 
-<div class="alert alert-light" role="alert"> 
-   This is a light alert—check it out! 
-</div> 
-<div class="alert alert-dark" role="alert"> 
-   This is a dark alert—check it out! 
+   Success! Your message has been sent succesfully. 
 </div>
+<div class="alert alert-warning" role="alert"> 
+   There was a problem with your network connection.
+</div> 
+<div class="alert alert-primary" role="alert">
+   Note! Please read the comments carefully
+</div>
+<div class="alert alert-danger" role="alert"> 
+    Error! A problem has been occured while submitting your data. 
+</div> 
 
 </body>
 </html>
