--- a/ndpage.html
+++ b/ndpage.html
@@ -21,3 +21,4 @@
 <div class="alert alert-danger" role="alert"> 
     Error! A problem has been occured while submitting your data. 
 </div> 
+ </html>
