--- a/ndpage.html
+++ b/ndpage.html
@@ -5,11 +5,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
-   <link rel="stylesheet" href="bootstrap.css">
-   <link rel="stylesheet" href="customs.css">
    <style>
-</style>
-<div class="alert alert-success" role="alert"> 
+     <link rel="stylesheet" href="bootstrap.css">
+     <link rel="stylesheet" href="customs.css">
+   </style>
+ </head>
+ <div class="alert alert-success" role="alert"> 
    Success! Your message has been sent succesfully. 
 </div>
 <div class="alert alert-warning" role="alert"> 
