--- a/ndpage.html
+++ b/ndpage.html
@@ -1,4 +1,35 @@
- <!DOCTYPE html>
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@Jenttila 
+Jenttila
+/
+uusi
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+uusi/index.html
+@Jenttila
+Jenttila Update index.html
+Latest commit 93bcfd8 12 minutes ago
+ History
+ 1 contributor
+118 lines (116 sloc)  4.43 KB
+  
+<!DOCTYPE html>
 <html>
 <head>
    <meta charset="utf-8">
@@ -6,11 +37,16 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
    <style>
-     <link rel="stylesheet" href="bootstrap.css">
-     <link rel="stylesheet" href="customs.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="customs.css">
    </style>
- </head>
- <div class="alert alert-success" role="alert"> 
+</head>
+<body>
+   <div class="jumbotron">
+      <h1>Some serious testing here</h1>
+      <p>Starting with alerts</p>
+</div>
+<div class="alert alert-success" role="alert"> 
    Success! Your message has been sent succesfully. 
 </div>
 <div class="alert alert-warning" role="alert"> 
@@ -22,4 +58,6 @@
 <div class="alert alert-danger" role="alert"> 
     Error! A problem has been occured while submitting your data. 
 </div> 
- </html>
+
+</body>
+</html>
