--- a/ndpage.html
+++ b/ndpage.html
@@ -15,6 +15,7 @@
       <h1>Some serious testing here</h1>
       <p>Starting with alerts</p>
 </div>
+<script src="bootstrap.js"></script>
 <div class="alert alert-success" role="alert"> 
    Success! Your message has been sent succesfully. 
 </div>
