--- a/ndpage.html
+++ b/ndpage.html
@@ -5,16 +5,102 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Sample Page</title>
+   <link rel="stylesheet" href="bootstrap.css">
+   <link rel="stylesheet" href="customs.css">
    <style>
-    <link rel="stylesheet" href="bootstrap.css">
-   </style>
+
+</style>
 </head>
 <body>
    <div class="jumbotron">
-      <h1>Some serious testing here</h1>
-      <p>Starting with alerts</p>
+      <h1>The B-day</h1>
+      <p>Guide to golden 27</p>
+   </div>
+   <script src="bootstrap.js"></script>
+   <div class="container-fluid">
+      <div class="row">
+	      <div class="col-xs-3">
+       		<a class="nav-link" href="https://www.google.com/search?q=big+pikes&tbm=isch&ved=2ahUKEwiwmY2th4nxAhUGxYsKHYSUAI4Q2-cCegQIABAA&oq=big+pikes&gs_lcp=CgNpbWcQAzIECAAQEzIKCAAQCBAHEB4QEzIICAAQCBAeEBM6BggAEAcQHjoICAAQBxAFEB46CAgAEAgQBxAeUKU6WKM8YPZBaABwAHgAgAFViAHtAZIBATOYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Zeu_YPDSNYaKrwSEqYLwCA&bih=656&biw=1396">Big fishies here</a>
+    	   </div>
+   	<div class="col-sm-5">
+     		   <a class="nav-link" href="https://www.k-ruoka.fi/artikkelit/juhla/kaaretortut">Rullabullas här</a>
+         </div>
+      <div class="col-md-3">
+          	<a class="nav-link" href="https://padeljoy.com/16-padel-tennis-tips-for-beginners/">The world of Padel</a>
+      </div>
+      <div class="col-lg-1">
+           	<a class="nav-link" href="http://www.nautical.ax/sv/mat/lunch">Nautica lunchmeny</a>
+      </div>
+   </div>
+   <p>
+	Formula for understanding women:<var>-</var><var>(</var><var>6</var><var>+</var><var>y</var><var>)</var><var>+</var><var>2</var><var>y</var><var>=</var><var>1</var>
+	   </p>
+   </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Ahvenaula</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Maarianhamina</p>
+                    </div>
+                </a> </div>
+        </div>
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Haukion Kala</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Kaukana kaukana ja tarpeeksi syvällä</p>
+			    <div class="alert alert-primary" role="alert">Mutta häijyjä ne on silti</div>
+                    </div>
+                </a> </div>
+        </div>
+        <div class="col-md-4">
+            <div class="content"> <a href="#">
+                    <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
+                    <div class="content-details fadeIn-bottom">
+                        <h3 class="content-title">Köllikulma</h3>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Kukkisen kulmilla</p>
+                    </div>
+                </a> </div>
+        </div>
+    </div>
 </div>
-<script src="bootstrap.js"></script>
+<div>	
+	<h2>Guest list for the party</h2>
+	<table class="table table-bordered">
+  <thead>
+    <tr class="table-active table-hover">
+      <th scope="col">Number</th>
+      <th scope="col">Name</th>
+      <th scope="col">Reason</th>
+      <th scope="col">Effort</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-info">
+      <th scope="row">1</th>
+      <td>Jenska</td>
+      <td>Missing the project end party</td>
+      <td>Bringing all the vodka</td>
+    </tr>
+    <tr class="table-light">
+      <th scope="row">2</th>
+      <td>Mr. Eumer</td>
+      <td>all the discussions about fish</td>
+      <td>Bringing all the fish</td>
+    </tr>
+    <tr class="table-danger">
+      <th scope="row">3</th>
+      <td>Erika Vikman</td>
+      <td>She's feeling hot</td>
+      <td>Bringing all the music</td>
+    </tr>
+  </tbody>
+</table>
+</div>
 <div class="alert alert-success" role="alert"> 
    Success! Your message has been sent succesfully. 
 </div>
