--- a/ndpage.html
+++ b/ndpage.html
@@ -12,8 +12,8 @@
 </head>
 <body>
    <div class="jumbotron">
-      <h1>The B-day</h1>
-      <p>Guide to golden 27</p>
+      <h1>Test page</h1>
+      <p>With the might jumbotron in the beginning</p>
    </div>
    <script src="bootstrap.js"></script>
 <div class="alert alert-success" role="alert"> 
