--- a/ndpage.html
+++ b/ndpage.html
@@ -11,7 +11,7 @@
 <body>
    <div class="jumbotron">
       <h1>Test page</h1>
-      <p>With the might jumbotron in the beginning</p>
+      <p>With the mighty jumbotron in the beginning</p>
    </div>
    <script src="bootstrap.js"></script>
 <div class="alert alert-success" role="alert"> 
