--- a/ndpage.html
+++ b/ndpage.html
@@ -15,16 +15,16 @@
    </div>
    <script src="bootstrap.js"></script>
 <div class="alert alert-success" role="alert"> 
-   Success! Your message has been sent succesfully. 
+   <b>Success!</b> Your message has been sent succesfully. 
 </div>
 <div class="alert alert-warning" role="alert"> 
-   There was a problem with your network connection.
+   <b>Warning!</b>There was a problem with your network connection.
 </div> 
 <div class="alert alert-primary" role="alert">
-   Note! Please read the comments carefully
+   <b>Note!</b> Please read the comments carefully
 </div>
 <div class="alert alert-danger" role="alert"> 
-    Error! A problem has been occured while submitting your data. 
+   <b>Error!</b> A problem has been occured while submitting your data. 
 </div> 
 </body>
 </html>
