--- a/ndpage.html
+++ b/ndpage.html
@@ -17,7 +17,10 @@
 <div class="alert alert-success" role="alert"> 
    <b>Success!</b> Your message has been sent succesfully. 
 </div>
-<div class="alert alert-warning" role="alert"> 
+<div class="alert alert-warning alert.dismissible fade show" role="alert"> 
+   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+   </button>
    <b>Warning!</b>There was a problem with your network connection.
 </div> 
 <div class="alert alert-primary" role="alert">
