--- a/ndpage.html
+++ b/ndpage.html
@@ -37,6 +37,8 @@
       <span aria-hidden="true">&times;</span>
    </button>
    <b>Error!</b> A problem has been occured while submitting your data. 
-</div> 
+</div>
+<div>
+   a href="https://www.reddit.com/r/funny/" class="badge badge-primary">Funny things here</a>
 </body>
 </html>
