--- a/ndpage.html
+++ b/ndpage.html
@@ -39,6 +39,6 @@
    <b>Error!</b> A problem has been occured while submitting your data. 
 </div>
 <div>
-   a href="https://www.reddit.com/r/funny/" class="badge badge-primary">Funny things here</a>
+   <a href="https://www.reddit.com/r/funny/" class="badge badge-primary">Funny things here</a>
 </body>
 </html>
