--- a/ndpage.html
+++ b/ndpage.html
@@ -40,5 +40,12 @@
 </div>
 <div>
    <a href="https://www.reddit.com/r/funny/" class="badge badge-primary">Funny things here</a>
+   </div>
+<div>
+<h1>Example heading <span class="badge badge-secondary">New</span></h1>
+<h2>Example heading <span class="badge badge-warning">New</span></h2>
+<h3>Example heading <span class="badge badge-success">New</span></h3> 
+<h4>Example heading <span class="badge badge-danger">New</span></h4> 
+
 </body>
 </html>
