--- a/ndpage.html
+++ b/ndpage.html
@@ -46,6 +46,15 @@
 <h2>Example heading <span class="badge badge-warning">New</span></h2>
 <h3>Example heading <span class="badge badge-success">New</span></h3> 
 <h4>Example heading <span class="badge badge-danger">New</span></h4> 
-
+   </div>
+<ol class="breadcrumb"> 
+     <li class="breadcrumb-item"><a href="https://jenttila.github.io/uusi/">Home</a></li> 
+     <li class="breadcrumb-item active">Web Design</li> 
+</ol> 
+<ol class="breadcrumb"> 
+     <li class="breadcrumb-item"><a href="https://jenttila.github.io/uusi/">Home</a></li> 
+     <li class="breadcrumb-item"><a href="https://jenttila.github.io/uusi/ndpage">Web Design</a></li> 
+     <li class="breadcrumb-item active">Bootsrap</li> 
+</ol>
 </body>
 </html>
