--- a/ndpage.html
+++ b/ndpage.html
@@ -56,6 +56,9 @@
      <li class="breadcrumb-item"><a href="https://jenttila.github.io/uusi/ndpage">Web Design</a></li> 
      <li class="breadcrumb-item active">Bootsrap</li> 
 </ol>
-<button type="button" class="btn btn-primary btn-lg"><img src="https://github.com/Jenttila/uusi/blob/main/envelope.png">Large button</button> 
-</body>
+</div>
+<button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-envelope"></span> Send a message</button> 
+<button type="button" class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-download-alt"></span> Download activities</button>
+<button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove-circle"></span> Deactivate this student</button>
+</div></body>
 </html>
