--- a/ndpage.html
+++ b/ndpage.html
@@ -60,5 +60,14 @@
 <button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-envelope"></span> Send a message</button> 
 <button type="button" class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-download-alt"></span> Download activities</button>
 <button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove-circle"></span> Deactivate this student</button>
-</div></body>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</body>
 </html>
