--- a/ndpage.html
+++ b/ndpage.html
@@ -62,11 +62,11 @@
 <button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove-circle"></span> Deactivate this student</button>
 </div>
 <div class="card" style="width: 18rem;">
-  <img src="https://github.com/Jenttila/uusi/blob/main/fishcake.GIF" class="card-img-top" alt="...">
+  <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Authentication</h5>
+    <p class="card-text">Login with your ID and password</p>
+    <a href="#" class="btn btn-primary">Learn more</a>
   </div>
 </div>
 </body>
