--- a/ndpage.html
+++ b/ndpage.html
@@ -69,5 +69,48 @@
     <a href="#" class="btn btn-primary">Learn more</a>
   </div>
 </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Card</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="row">
+<div class="col-sm-3">
+	<div class="card" style="width: 18rem;">
+  		<div class="card-body">
+    	<h5 class="card-title">Authentication</h5>
+    	<p class="card-text">Login with your ID and password</p>
+    	<a href="#" class="btn btn-primary">Learn more</a>
+		</div>
+	</div>
+</div>
+<div class="col-sm-3">
+	<div class="card" style="width: 18rem;">
+  		<div class="card-body">
+    	<h5 class="card-title">Subscription</h5>
+    	<p class="card-text">Subscription billing made easy</p>
+    	<a href="#" class="btn btn-primary">Learn more</a>
+		</div>
+	</div>
+</div>
+<div class="col-sm-3">
+	<div class="card" style="width: 18rem;">
+  		<div class="card-body">
+    	<h5 class="card-title">Open Source</h5>
+    	<p class="card-text">Make us of open source</p>
+    	<a href="#" class="btn btn-primary">Learn more</a>
+		</div>
+	</div>
+</div>
+</div>
+</body>
+</html>
 </body>
 </html>
