--- a/ndpage.html
+++ b/ndpage.html
@@ -112,7 +112,54 @@
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
-    Üüüüüü¨llatüüüs!
+    Üüüüüüllatüüüs!
+  </div>
+</div>
+<div class="accordion" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Sekalaista sisältöä
+        </button>
+      </h2>
+    </div>
+<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+Katsokaa tätä meteliä! // Puolustus pelataan kebab-kioskille! // Ja NYT TULEE PITKÄ KIEKKO, EIPÄS KUN SELÄNNE! // Painetaan vähän yli sanoja taas, että joku saa siitä herneitä housuihinsa // Kun muistetaan että tämä on kuudes kahden minuutin rangaistus, niin tällaiseen määrään rangaistuksia Suomella ei ole mitään mahdollisuuksia ottaa näissä jatko-otteluissa. Muuten käy kuin entiselle miehelle naapurin aitassa. Miten siellä sitten kävi, sen voitte lukea muistelmistani, jotka ilmestyvät vuonna 2087.
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Vuoden 2018 satoa
+        </button>
+      </h2>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+      <div class="card-body">
+        Korea on polvillaan, kuin entinen mies, joka joutui olemaan todella kauan polvillaan ennen, kuin morsian sanoi tahdon. (Suomi - Etelä-Korea, alkusarjaottelu) //
+Ensimmäinen veto tulee aamupäivällä, ja toinen veto tulee vasta iltapäivällä, ja kolmas kun iltavuoro on alkamassa. (Suomi - Etelä-Korea, alkusarjaottelu) // 
+Sieltä tulee elämä! (Mertaranta kommentoi Sebastian Ahon dominointia.) // On tuolla pojalla kaamea soitin! (Mertaranta kun Sebastian Aho lyö Suomen 1-0 johtoon Latviaa vastaan.) // Marko "suomalainen tammi" Anttila. (Latvia - Suomi, alkusarjaottelu)
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Vuonna 2013
+        </button>
+      </h2>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+      <div class="card-body">
+Jeff Petry siinä ihmettelee, että missä maailmanpyörässä tässä ollaan? Itse en uskalla sinne mennä, en myöskään lentäviin mattoihin. Ainoa, mihin uskaltaa on kummitusjuna, mutta äiti ei enää päästä sinnekään. (USA-Suomi, 8.5., Petry ei saa pomppivaa kiekkoa haltuunsa ja Jarno Koskiranta pääsee maalintekoon.) //
+Harmin paikka, että Seinäjoen Maila-Jussien porukka on kasassa tälle vuodelle. (Petri Kontiola lyö kiekon maaliin ilmasta.) // Savolaiset naattii ennen laakasua, mutta siinä ei Salminen kerennyt naattia kun piti jo laakasta // Tämähän alkaa muistuttaa niitä kuuluisia vaaleja joissa luettiin Kekkonen. Kekkonen. Kekkonen. Täällä on luettu 8 kertaa Kontiola. Ei lueta kaikkia, erä loppuu.
+      </div>
+    </div>
   </div>
 </div>
 <div class="bd-example">
