--- a/ndpage.html
+++ b/ndpage.html
@@ -65,6 +65,16 @@
 <button type="button" class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-download-alt"></span> Download activities</button>
 <button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove-circle"></span> Deactivate this student</button>
 </div>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Button with choices
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">number 1</a>
+    <a class="dropdown-item" href="#">number 2</a>
+    <a class="dropdown-item" href="#">number 3</a>
+  </div>
+</div>
 <div class="card" style="width: 18rem;">
   <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" class="card-img-top" alt="...">
   <div class="card-body">
