--- a/ndpage.html
+++ b/ndpage.html
@@ -51,6 +51,28 @@
 <h3>Example heading <span class="badge badge-success">New</span></h3> 
 <h4>Example heading <span class="badge badge-danger">New</span></h4> 
    </div>
+<div class="btn-group">
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Action
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Separated link</a>
+  </div>
+  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    YAY!
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Separated link</a>
+  </div>
+</div>
 <ol class="breadcrumb"> 
      <li class="breadcrumb-item"><a href="https://jenttila.github.io/uusi/">Home</a></li> 
      <li class="breadcrumb-item active">Web Design</li> 
