--- a/ndpage.html
+++ b/ndpage.html
@@ -52,7 +52,7 @@
 <h4>Example heading <span class="badge badge-danger">New</span></h4> 
    </div>
 <div class="btn-group">
-  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Action
   </button>
   <div class="dropdown-menu">
@@ -62,7 +62,7 @@
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="#">Separated link</a>
   </div>
-  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     YAY!
   </button>
   <div class="dropdown-menu">
