--- a/ndpage.html
+++ b/ndpage.html
@@ -62,6 +62,8 @@
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="#">Separated link</a>
   </div>
+  </div>
+  <div class="btn-group">
   <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     YAY!
   </button>
