--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <div class="content"> <a href="#">
+            <div class="content"> <a href="https://jenttila.github.io/uusi/ndpage">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Ahvenaula</h3>
@@ -45,7 +45,7 @@
                 </a> </div>
         </div>
         <div class="col-md-4">
-            <div class="content"> <a href="#">
+            <div class="content"> <a href="https://jenttila.github.io/uusi/form">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Haukion Kala</h3>
