--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Köllikulma</h3>
-                        <p class="content-text"><i class="fa fa-map-marker"></i>Kukkisen kulmilla</p>
+                        <p class="content-text"><i class="fa fa-map-marker"></i><a href="https://jenttila.github.io/uusi/signing"Ota yhteyttä!<a></p>
                     </div>
                 </a> </div>
         </div>
