--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                 </a> </div>
         </div>
         <div class="col-md-4">
-            <div class="content"> <a href="#">
+            <div class="content"> <a href="https://jenttila.github.io/uusi/signing">
                     <div class="content-overlay"></div> <img class="content-image" src="fishcake.GIF">
                     <div class="content-details fadeIn-bottom">
                         <h3 class="content-title">Köllikulma</h3>
-                        <p class="content-text"><i class="fa fa-map-marker"></i><a href="https://jenttila.github.io/uusi/signing"Ota yhteyttä!<a></p>
+                        <p class="content-text"><i class="fa fa-map-marker"></i>Ota yhteyttä!</p>
                     </div>
                 </a> </div>
         </div>
