--- a/ndpage.html
+++ b/ndpage.html
@@ -150,6 +150,33 @@
     Üüüüüüllatüüüs!
   </div>
 </div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header bg-primary">
+        <h5 class="modal-title" id="exampleModalLabel">Custom size modal</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        A demo of changing width of modal window. For that, the width is specified in the modal-dialog class. The header is also customized.
+      </div>
+  <div class="modal-footer">
+    <button type="submit split" class="btn btn-primary">OK</button>
+    <button type="submit" class="btn btn-success">Save</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+   <hr/>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="accordion" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
