--- a/navbar.html
+++ b/navbar.html
@@ -42,5 +42,17 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Random body content button
 </button>
+<p class="text-center">Skillset example using stacked progressbar</p>
+<div class="container p-3"  style="background-color: lightblue">
+<div class="progress">
+  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">JQUERY 30%</div>
+  <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML 25%</div>
+  <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">CSS 20%</div>
+  <div class="progress-bar bg-info" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">PHP 15%</div>
+  <div class="progress-bar bg-light" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+</div>
+<br>
+  
 </body>
 </html>
