--- a/navbar.html
+++ b/navbar.html
@@ -38,6 +38,38 @@
 </ul>
   </div>
 </nav>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-tower" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-knight" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-magnet" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+</button>
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+</button>
+</body>
+</html>
 <hr>
 <div class="text-center">
 <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
